futher improving configuration. unfortunatelly node names are not resolved

--- a/roles/kubernetes/master/tasks/main.yml
+++ b/roles/kubernetes/master/tasks/main.yml
@@ -76,3 +76,6 @@
 
 - name: Include kubeadm secondary server apiserver fixes
   include_tasks: kubeadm-fix-apiserver.yml
+
+- name: Include external cloud controller
+  include_tasks: external-cloud-controller.yml
