renaming file external-cloud-controller.yml into external-cloud-controller-manager.yml

--- a/roles/kubernetes/master/tasks/main.yml
+++ b/roles/kubernetes/master/tasks/main.yml
@@ -73,8 +73,10 @@
 - name: Include kubeadm etcd extra tasks
   include_tasks: kubeadm-etcd.yml
   when: etcd_kubeadm_enabled
-- name: Include external cloud controller
-  include_tasks: external-cloud-controller.yml
-  
+
 - name: Include kubeadm secondary server apiserver fixes
   include_tasks: kubeadm-fix-apiserver.yml
+
+- name: Include external cloud controller
+  import_tasks: external-cloud-controller-manager.yml
+  tags: [ cloud_controller_manager ]
